v16.2/enums/GC.Spread.Sheets.ConditionalFormatting.RuleType.md
# Enumeration: RuleType

[Sheets](../modules/GC.Spread.Sheets.md).[ConditionalFormatting](../modules/GC.Spread.Sheets.ConditionalFormatting.md).RuleType

规则类型

## Table of contents

### Enumeration members

- [averageRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#averagerule)
- [cellValueRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#cellvaluerule)
- [columnStateRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#columnstaterule)
- [conditionRuleBase](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#conditionrulebase)
- [dataBarRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#databarrule)
- [dateOccurringRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#dateoccurringrule)
- [duplicateRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#duplicaterule)
- [formulaRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#formularule)
- [iconSetRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#iconsetrule)
- [rowStateRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#rowstaterule)
- [specificTextRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#specifictextrule)
- [threeScaleRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#threescalerule)
- [top10Rule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#top10rule)
- [twoScaleRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#twoscalerule)
- [uniqueRule](GC.Spread.Sheets.ConditionalFormatting.RuleType.md#uniquerule)

## Enumeration members

### <a id="averagerule" name="averagerule"></a> averageRule

• **averageRule** = `8`

平均规则

___

### <a id="cellvaluerule" name="cellvaluerule"></a> cellValueRule

• **cellValueRule** = `1`

单元格值规则

___

### <a id="columnstaterule" name="columnstaterule"></a> columnStateRule

• **columnStateRule** = `15`

列状态规则

___

### <a id="conditionrulebase" name="conditionrulebase"></a> conditionRuleBase

• **conditionRuleBase** = `0`

条件的基本规则

___

### <a id="databarrule" name="databarrule"></a> dataBarRule

• **dataBarRule** = `12`

数据条规则

___

### <a id="dateoccurringrule" name="dateoccurringrule"></a> dateOccurringRule

• **dateOccurringRule** = `4`

日期发生的规则

___

### <a id="duplicaterule" name="duplicaterule"></a> duplicateRule

• **duplicateRule** = `7`

重复规则

___

### <a id="formularule" name="formularule"></a> formulaRule

• **formulaRule** = `3`

公式规则

___

### <a id="iconsetrule" name="iconsetrule"></a> iconSetRule

• **iconSetRule** = `13`

图标集规则

___

### <a id="rowstaterule" name="rowstaterule"></a> rowStateRule

• **rowStateRule** = `14`

行状态规则

___

### <a id="specifictextrule" name="specifictextrule"></a> specificTextRule

• **specificTextRule** = `2`

特定的文本规则

___

### <a id="threescalerule" name="threescalerule"></a> threeScaleRule

• **threeScaleRule** = `11`

三色刻度规则

___

### <a id="top10rule" name="top10rule"></a> top10Rule

• **top10Rule** = `5`

前10条规则

___

### <a id="twoscalerule" name="twoscalerule"></a> twoScaleRule

• **twoScaleRule** = `10`

双色刻度规则

___

### <a id="uniquerule" name="uniquerule"></a> uniqueRule

• **uniqueRule** = `6`

唯一规则
